src/SdlSharp.ImGui.Native/dear_bindings/dcimgui.h


typedef struct ImVec2_t ImVec2;
typedef struct ImDrawList_t ImDrawList;                              
typedef struct ImGuiPayload_t ImGuiPayload;                                    
typedef int ImGuiCond;            
typedef int ImGuiDragDropFlags;     
typedef int ImGuiHoveredFlags;      
typedef int ImGuiTabBarFlags;       
typedef int ImGuiTabItemFlags;      
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);      
CIMGUI_API void ImGui_PlotLinesCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);  
CIMGUI_API void ImGui_PlotHistogramCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API float ImGui_GetColumnOffset(int column_index );       
CIMGUI_API void  ImGui_SetColumnOffset(int column_index, float offset_x);  
CIMGUI_API int   ImGui_GetColumnsCount(void);
CIMGUI_API bool ImGui_BeginTabBar(const char* str_id, ImGuiTabBarFlags flags );    
CIMGUI_API void ImGui_EndTabBar(void);                                                      
CIMGUI_API bool ImGui_BeginTabItem(const char* label, bool* p_open , ImGuiTabItemFlags flags ); 
CIMGUI_API void ImGui_EndTabItem(void);                                                     
CIMGUI_API bool ImGui_TabItemButton(const char* label, ImGuiTabItemFlags flags );  
CIMGUI_API void ImGui_SetTabItemClosed(const char* tab_or_docked_window_label);             
CIMGUI_API void ImGui_LogToTTY(int auto_open_depth );                                      
CIMGUI_API void ImGui_LogToFile(int auto_open_depth , const char* filename );  
CIMGUI_API void ImGui_LogToClipboard(int auto_open_depth );                                
CIMGUI_API void ImGui_LogFinish(void);                                                               
CIMGUI_API void ImGui_LogButtons(void);                                                              
CIMGUI_API bool                ImGui_BeginDragDropSource(ImGuiDragDropFlags flags );                      
CIMGUI_API bool                ImGui_SetDragDropPayload(const char* type, const void* data, size_t sz, ImGuiCond cond ); 
CIMGUI_API void                ImGui_EndDragDropSource(void);                                                      
CIMGUI_API bool                ImGui_BeginDragDropTarget(void);                                                    
CIMGUI_API const ImGuiPayload* ImGui_AcceptDragDropPayload(const char* type, ImGuiDragDropFlags flags );  
CIMGUI_API void                ImGui_EndDragDropTarget(void);                                                      
CIMGUI_API const ImGuiPayload* ImGui_GetDragDropPayload(void);                                                     
CIMGUI_API void ImGui_BeginDisabled(bool disabled );
CIMGUI_API void ImGui_EndDisabled(void);
CIMGUI_API void ImGui_PushClipRect(ImVec2 clip_rect_min, ImVec2 clip_rect_max, bool intersect_with_current_clip_rect);
CIMGUI_API void ImGui_PopClipRect(void);
CIMGUI_API void ImGui_SetItemDefaultFocus(void);                     
CIMGUI_API void ImGui_SetKeyboardFocusHereEx(int offset );  
CIMGUI_API void ImGui_SetNavCursorVisible(bool visible);  
CIMGUI_API void ImGui_SetNextItemAllowOverlap(void);  
CIMGUI_API bool    ImGui_IsItemHovered(ImGuiHoveredFlags flags );          
CIMGUI_API bool    ImGui_IsItemActive(void);                                        
typedef enum
{
    ImGuiHoveredFlags_None                         = 0,      
    ImGuiHoveredFlags_ChildWindows                 = 1<<0,   
    ImGuiHoveredFlags_RootWindow                   = 1<<1,   
    ImGuiHoveredFlags_AnyWindow                    = 1<<2,   
    ImGuiHoveredFlags_NoPopupHierarchy             = 1<<3,   
    ImGuiHoveredFlags_AllowWhenBlockedByPopup      = 1<<5,   
    ImGuiHoveredFlags_AllowWhenBlockedByActiveItem = 1<<7,   
    ImGuiHoveredFlags_AllowWhenOverlappedByItem    = 1<<8,   
    ImGuiHoveredFlags_AllowWhenOverlappedByWindow  = 1<<9,   
    ImGuiHoveredFlags_AllowWhenDisabled            = 1<<10,  
    ImGuiHoveredFlags_NoNavOverride                = 1<<11,  
    ImGuiHoveredFlags_AllowWhenOverlapped          = ImGuiHoveredFlags_AllowWhenOverlappedByItem | ImGuiHoveredFlags_AllowWhenOverlappedByWindow,
    ImGuiHoveredFlags_RectOnly                     = ImGuiHoveredFlags_AllowWhenBlockedByPopup | ImGuiHoveredFlags_AllowWhenBlockedByActiveItem | ImGuiHoveredFlags_AllowWhenOverlapped,
    ImGuiHoveredFlags_RootAndChildWindows          = ImGuiHoveredFlags_RootWindow | ImGuiHoveredFlags_ChildWindows,
    ImGuiHoveredFlags_ForTooltip                   = 1<<12,  
    ImGuiHoveredFlags_Stationary                   = 1<<13,  
    ImGuiHoveredFlags_DelayNone                    = 1<<14,  
    ImGuiHoveredFlags_DelayShort                   = 1<<15,  
    ImGuiHoveredFlags_DelayNormal                  = 1<<16,  
    ImGuiHoveredFlags_NoSharedDelay                = 1<<17,  
} ImGuiHoveredFlags_;
typedef enum
{
    ImGuiDragDropFlags_None                     = 0,
    ImGuiDragDropFlags_SourceNoPreviewTooltip   = 1<<0,                                  
    ImGuiDragDropFlags_SourceNoDisableHover     = 1<<1,                                  
    ImGuiDragDropFlags_SourceNoHoldToOpenOthers = 1<<2,                                  
    ImGuiDragDropFlags_SourceAllowNullID        = 1<<3,                                  
    ImGuiDragDropFlags_SourceExtern             = 1<<4,                                  
    ImGuiDragDropFlags_PayloadAutoExpire        = 1<<5,                                  
    ImGuiDragDropFlags_PayloadNoCrossContext    = 1<<6,                                  
    ImGuiDragDropFlags_PayloadNoCrossProcess    = 1<<7,                                  
    ImGuiDragDropFlags_AcceptBeforeDelivery     = 1<<10,                                 
    ImGuiDragDropFlags_AcceptNoDrawDefaultRect  = 1<<11,                                 
    ImGuiDragDropFlags_AcceptNoPreviewTooltip   = 1<<12,                                 
    ImGuiDragDropFlags_AcceptDrawAsHovered      = 1<<13,                                 
    ImGuiDragDropFlags_AcceptPeekOnly           = ImGuiDragDropFlags_AcceptBeforeDelivery | ImGuiDragDropFlags_AcceptNoDrawDefaultRect, 
#ifndef IMGUI_DISABLE_OBSOLETE_FUNCTIONS
    ImGuiDragDropFlags_SourceAutoExpirePayload  = ImGuiDragDropFlags_PayloadAutoExpire,  
#endif 
} ImGuiDragDropFlags_;
struct ImGuiPayload_t
{
    void*   Data;            
    int     DataSize;        
    ImGuiID SourceId;        
    ImGuiID SourceParentId;  
    int     DataFrameCount;  
    char    DataType[32+1];  
    bool    Preview;         
    bool    Delivery;        
};
struct ImDrawList_t
{
    ImVector_ImDrawCmd    CmdBuffer;          
    ImVector_ImDrawIdx    IdxBuffer;          
    ImVector_ImDrawVert   VtxBuffer;          
    ImDrawListFlags       Flags;              
    unsigned int          _VtxCurrentIdx;     
    ImDrawListSharedData* _Data;              
    ImDrawVert*           _VtxWritePtr;       
    ImDrawIdx*            _IdxWritePtr;       
    ImVector_ImVec2       _Path;              
    ImDrawCmdHeader       _CmdHeader;         
    ImDrawListSplitter    _Splitter;          
    ImVector_ImVec4       _ClipRectStack;     
    ImVector_ImTextureRef _TextureStack;      
    ImVector_ImU8         _CallbacksDataBuf;  
    float                 _FringeScale;       
    const char*           _OwnerName;         
};
CIMGUI_API bool   ImGui_ComboObsolete(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count); 
CIMGUI_API bool   ImGui_ComboObsoleteEx(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count, int popup_max_height_in_items );
CIMGUI_API bool   ImGui_ListBoxObsolete(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count); 
CIMGUI_API bool   ImGui_ListBoxObsoleteEx(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count, int height_in_items );