src/Sdl3Sharp.ImGui/Native/ImGui.cs


    /// <summary>
    /// get position of column line (in pixels, from the left side of the contents region). pass -1 to use current column, otherwise 0..GetColumnsCount() inclusive. column 0 is typically 0.0f
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetColumnOffset")]
    public static partial float GetColumnOffset(int column_index);

    /// <summary>
    /// set position of column line (in pixels, from the left side of the contents region). pass -1 to use current column
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetColumnOffset")]
    public static partial void SetColumnOffset(int column_index, float offset_x);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetColumnsCount")]
    public static partial int GetColumnsCount();

    #endregion

    #region Tab Bars, Tabs

    /// <summary>
    /// Tab Bars, Tabs
    /// - Note: Tabs are automatically created by the docking system (when in 'docking' branch). Use this to create tab bars/tabs yourself.
    /// create and append into a TabBar
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_BeginTabBar")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool BeginTabBar([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id, ImGuiTabBarFlags flags);

    /// <summary>
    /// only call EndTabBar() if BeginTabBar() returns true!
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_EndTabBar")]
    public static partial void EndTabBar();

    /// <summary>
    /// create a Tab. Returns true if the Tab is selected.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_BeginTabItem")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool BeginTabItem([MarshalAs(UnmanagedType.LPUTF8Str)] string label, bool* p_open, ImGuiTabItemFlags flags);

    /// <summary>
    /// only call EndTabItem() if BeginTabItem() returns true!
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_EndTabItem")]
    public static partial void EndTabItem();

    /// <summary>
    /// create a Tab behaving like a button. return true when clicked. cannot be selected in the tab bar.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_TabItemButton")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool TabItemButton([MarshalAs(UnmanagedType.LPUTF8Str)] string label, ImGuiTabItemFlags flags);

    /// <summary>
    /// notify TabBar or Docking system of a closed tab/window ahead (useful to reduce visual flicker on reorderable tab bars). For tab-bar: call after BeginTabBar() and before Tab submissions. Otherwise call with a window name.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetTabItemClosed")]
    public static partial void SetTabItemClosed([MarshalAs(UnmanagedType.LPUTF8Str)] string tab_or_docked_window_label);

    #endregion

    #region Logging/Capture

    /// <summary>
    /// Logging/Capture
    /// - All text output from the interface can be captured into tty/file/clipboard. By default, tree nodes are automatically opened during logging.
    /// start logging to tty (stdout)
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_LogToTTY")]
    public static partial void LogToTTY(int auto_open_depth);

    /// <summary>
    /// start logging to file
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_LogToFile")]
    public static partial void LogToFile(int auto_open_depth, [MarshalAs(UnmanagedType.LPUTF8Str)] string filename);

    /// <summary>
    /// start logging to OS clipboard
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_LogToClipboard")]
    public static partial void LogToClipboard(int auto_open_depth);

    /// <summary>
    /// stop logging (close file, etc.)
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_LogFinish")]
    public static partial void LogFinish();

    /// <summary>
    /// helper to display buttons for logging to tty/file/clipboard
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_LogButtons")]
    public static partial void LogButtons();

    #endregion

    #region Drag and Drop

    /// <summary>
    /// Drag and Drop
    /// - On source items, call BeginDragDropSource(), if it returns true also call SetDragDropPayload() + EndDragDropSource().
    /// - On target candidates, call BeginDragDropTarget(), if it returns true also call AcceptDragDropPayload() + EndDragDropTarget().
    /// - If you stop calling BeginDragDropSource() the payload is preserved however it won't have a preview tooltip (we currently display a fallback "..." tooltip, see #1725)
    /// - An item can be both drag source and drop target.
    /// call after submitting an item which may be dragged. when this return true, you can call SetDragDropPayload() + EndDragDropSource()
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_BeginDragDropSource")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool BeginDragDropSource(ImGuiDragDropFlags flags);

    /// <summary>
    /// type is a user defined string of maximum 32 characters. Strings starting with '_' are reserved for dear imgui internal types. Data is copied and held by imgui. Return true when payload has been accepted.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetDragDropPayload")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool SetDragDropPayload([MarshalAs(UnmanagedType.LPUTF8Str)] string type, nint data, nuint sz, ImGuiCond cond);

    /// <summary>
    /// only call EndDragDropSource() if BeginDragDropSource() returns true!
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_EndDragDropSource")]
    public static partial void EndDragDropSource();

    /// <summary>
    /// call after submitting an item that may receive a payload. If this returns true, you can call AcceptDragDropPayload() + EndDragDropTarget()
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_BeginDragDropTarget")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool BeginDragDropTarget();

    /// <summary>
    /// accept contents of a given type. If ImGuiDragDropFlags_AcceptBeforeDelivery is set you can peek into the payload before the mouse button is released.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_AcceptDragDropPayload")]
    public static partial ImGuiPayload* AcceptDragDropPayload([MarshalAs(UnmanagedType.LPUTF8Str)] string type, ImGuiDragDropFlags flags);

    /// <summary>
    /// only call EndDragDropTarget() if BeginDragDropTarget() returns true!
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_EndDragDropTarget")]
    public static partial void EndDragDropTarget();

    /// <summary>
    /// peek directly into the current payload from anywhere. returns NULL when drag and drop is finished or inactive. use ImGuiPayload::IsDataType() to test for the payload type.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetDragDropPayload")]
    public static partial ImGuiPayload* GetDragDropPayload();

    #endregion

    #region Disabling [BETA API]

    /// <summary>
    /// Disabling [BETA API]
    /// - Disable all user interactions and dim items visuals (applying style.DisabledAlpha over current colors)
    /// - Those can be nested but it cannot be used to enable an already disabled section (a single BeginDisabled(true) in the stack is enough to keep everything disabled)
    /// - Tooltips windows are automatically opted out of disabling. Note that IsItemHovered() by default returns false on disabled items, unless using ImGuiHoveredFlags_AllowWhenDisabled.
    /// - BeginDisabled(false)/EndDisabled() essentially does nothing but is provided to facilitate use of boolean expressions (as a micro-optimization: if you have tens of thousands of BeginDisabled(false)/EndDisabled() pairs, you might want to reformulate your code to avoid making those calls)
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_BeginDisabled")]
    public static partial void BeginDisabled([MarshalAs(UnmanagedType.U1)] bool disabled);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_EndDisabled")]
    public static partial void EndDisabled();

    #endregion

    #region Clipping

    /// <summary>
    /// Clipping
    /// - Mouse hovering is affected by ImGui::PushClipRect() calls, unlike direct calls to ImDrawList::PushClipRect() which are render only.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_PushClipRect")]
    public static partial void PushClipRect(ImVec2 clip_rect_min, ImVec2 clip_rect_max, [MarshalAs(UnmanagedType.U1)] bool intersect_with_current_clip_rect);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_PopClipRect")]
    public static partial void PopClipRect();

    #endregion

    #region Focus, Activation

    /// <summary>
    /// Focus, Activation
    /// make last item the default focused item of a newly appearing window.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetItemDefaultFocus")]
    public static partial void SetItemDefaultFocus();

    /// <summary>
    /// focus keyboard on the next widget. Use positive 'offset' to access sub components of a multiple component widget. Use -1 to access previous widget.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetKeyboardFocusHereEx")]
    public static partial void SetKeyboardFocusHereEx(int offset);

    #endregion

    #region Keyboard/Gamepad Navigation

    /// <summary>
    /// Keyboard/Gamepad Navigation
    /// alter visibility of keyboard/gamepad cursor. by default: show when using an arrow key, hide when clicking with mouse.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetNavCursorVisible")]
    public static partial void SetNavCursorVisible([MarshalAs(UnmanagedType.U1)] bool visible);

    #endregion

    #region Overlapping mode

    /// <summary>
    /// Overlapping mode
    /// allow next item to be overlapped by a subsequent item. Useful with invisible buttons, selectable, treenode covering an area where subsequent items may need to be added. Note that both Selectable() and TreeNode() have dedicated flags doing this.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetNextItemAllowOverlap")]
    public static partial void SetNextItemAllowOverlap();

    #endregion

    #region Item/Widgets Utilities and Query Functions

    /// <summary>
    /// Item/Widgets Utilities and Query Functions
    /// - Most of the functions are referring to the previous Item that has been submitted.
    /// - See Demo Window under "Widgets-&gt;Querying Status" for an interactive visualization of most of those functions.
    /// is the last item hovered? (and usable, aka not blocked by a popup, etc.). See ImGuiHoveredFlags for more options.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_IsItemHovered")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool IsItemHovered(ImGuiHoveredFlags flags);

    /// <summary>
    /// is the last item active? (e.g. button being held, text field being edited. This will continuously return true while holding mouse button on an item. Items that don't interact will always return false)
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_IsItemActive")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool IsItemActive();
